fixed some spacing and margin issues on homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,45 +2,51 @@ body {
   margin: 100px auto;
   widows: 550px;
   font-family:Courier;
-  font-size:15pt;
+  font-size:24pt;
 }
 
-/* unvisited link */
-a:link {
+a:hover, a:visited, a:link, a:active
+{
     color: #00b1e5;
+    text-decoration: none;
 }
+/* unvisited link */
+/*a:link {
+    color: #00b1e5;
+}*/
 
 /* visited link */
-a:visited {
+/*a:visited {
     color: #00b1e5;
-}
+}*/
 
 /* mouse over link */ /* I don't know why the text becomes underlined on mouseover... how is jekyll interacting with this? */
-a:hover {
+/*a:hover {
+    text-decoration: none;
     color: #00b1e5;
-}
+}*/
 
 /* selected link */
-a:active {
+/*a:active {
     color: #00b1e5;
-}
+}*/
 
 #footer {
   margin-top: 100px;
 }
 h1 {
-  font-size:50px;
+  font-size:65px;
   font-family:Courier;
   font-weight:normal;
   color:#00b1e5;
-  margin: 0 0 0 -65px;
+  margin: 0 0 0 -85px;
 }
 p {
   line-height:200%;
 }
 h2,h3,h4,h5,h6,h7 {
-  text-transform:uppercase;
-  margin-top: 2em;
+  /*text-transform:uppercase;*/
+  margin-top: 0;
 }
 .post {
 }
